maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:15: error: ';' expected but 'while' found.
keepHandOnSideWall()while(getDirection==Direction.NORD){
                    ^